fea-rs/test-data/compile-tests/mini-latin/bad/inline_liga_sub_non_singleton_class.fea

feature yep {
    # for ligature sub, error if replacement is a (non-singleton) class
    sub [a]' [b c]' by [x y];
    # or there are multiple replacements
    sub [d]' [e f]' by v w;
    # or a replacement is null
    sub [g]' [h i]' by NULL;
    # or is an empty class
    sub [j]' [k l]' by [];
} yep;
